--- a/style.css
+++ b/style.css
@@ -1,169 +1,266 @@
-body{
-    font-family: 'Montserrat', sans-serif;
-    background: #bbb2a6;
-    height: 1399px;
-    max-width: 1280px;   
-    border-radius: 0px;
-    margin: 40px auto;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-h1{
-    font-weight: bold;
-    font-size: 45px;
-    line-height: 55px;
-    padding: 0 0 0 0;
-    text-shadow: 1px 1px 5px darkslateblue;
-}
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
 
-h2{
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 17px;
-    padding-bottom: 40px;
-    text-shadow: 1px 1px 5px darkslateblue;
-}
-
-h3{
-    color:#FB6D3A;
+    --primary-text-color: #181820;
+    --secondary-text-color: #5c5c62;
+    --durability-text-color: #6a737d9c;
+    --icon-color: #6a737d;
+    --border-color: #ff9a0045;
+    --text-decoration-color: #ff9a00;
 }
 
 .container {
+    margin: 0 auto;
+    padding: 0 30px;
+    max-width: 900px;
+}
+
+.fh {
     display: flex;
-    flex-direction: row-reverse;
-    background-color: #fff;
-    flex: 0 1 auto;
-    justify-content: space-around;
-    font-size: 16px;
-    line-height: 24px;
-    color: #595959;
-    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.2);
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-.main-content {
-    max-width: 830px;
-    padding: 30px 0 0 88px;
-    margin: 0 35px 0 -25px;
+.fv {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.main-content h3{
-    font-size: 22px;
+.resume {
+    margin: 50px auto;
+    border: 1px solid #f5f5f5;
+    box-shadow: 1px 1px 7px 7px #f5f5f5;
+    padding: 30px 0;
+    max-width: 900px;
 }
 
-.about-me {
-}
-.about-me > p{
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
-    padding: 0 95px 0 0;
-}
-
-
-.projects {
-    font-size: 14px;
-    line-height: 24px;
-    margin-bottom: 40px;
-}
-
-.projects a{
-    color: #595959;
-}
-
-.projects a:hover{
-    color:rgb(156, 48, 48);
-    text-shadow: 0.3px 0.3px #000;
-}
-
-.projects span{
-    font-weight: 600;
-    opacity: 0.8;
-}
-
-.projects li:first-child{
+.resume__block {
+    border-bottom: 3px solid var(--border-color);
     padding-bottom: 30px;
+    margin-bottom: 15px;
 }
 
-.realtime{
-    margin-bottom: 40px;
-}
+@media screen and (max-width: 576px) {
 
-.realtime li{
-    padding: 5px 0;
-}
-
-.realtime li a{
-    color:black;
-}
-.realtime li a:hover{
-    color:#FB6D3A;
-    transition-duration: 0.5s;
-}
-
-.realtime li span{
-    font-weight: bold;
-}
-
-.work{
-    margin-bottom: 40px;
-}
-
-.work li{
-    padding: 5px 0;
-}
-
-.purpose {
-    padding-bottom: 100px;
-}
-.contacts li:hover{
-    text-shadow: 0.4px 0.4px rgb(10, 56, 37);
-}
-
-.contacts a {
-    color: crimson;
-    text-decoration: none;
-}
-
-.contacts span{
-    margin-right: 7px;
-}
-
-.foto{
-    padding: 40px 0;
-    max-width: 370px;
-}
-
-.list li{
-    color: #FB6D3A;
-}
-
-.list li span{
-    color: #FFFFFF;
-}
-
-.bold{
-    font-weight: bold;
-}
-
-.radio{
-    text-align: center;
-    margin-bottom: 5px;
-    padding-top: 5px;
-}
-.light {
-    background: rgb(255, 255, 255);
-    color: #595959;;
-}
-.dark {
-    background: rgb(28, 24, 44);
-    color: #fff;
-}
-
-@media (max-width: 767px){
-    .container {
+    .main-info,
+    .contact_info_container {
         flex-direction: column;
     }
 
-    .purpose{
-        margin-bottom: 50px;
+    .contact_info_container {
+        align-items: center;
     }
+
+    .contact-info__block:not(:last-child) {
+        margin-bottom: 20px;
+    }
+
+    .experiences {
+        margin-right: 0;
+    }
+}
+
+
+.contact-info__header,
+.contact-info__sub-header {
+    text-align: center;
+}
+
+.contact-info__header {
+    color: var(--primary-text-color);
+    margin-bottom: 15px;
+    text-decoration-color: var(--text-decoration-color);
+    text-decoration-line: underline;
+}
+
+.contact-info__sub-header {
+    color: var(--secondary-text-color);
+    margin-bottom: 30px;
+}
+
+.contact-info__block {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.contact-info__block--center {
+    justify-content: center;
+}
+
+.contact-info__item {
+    color: var(--secondary-text-color);
+    text-decoration: none;
+    display: flex;
+    justify-content: start;
+}
+
+.contact-info__item:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.contact-info__item-icon-wrapper {
+    margin-right: 10px;
+    width: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.contact-info__item-icon path {
+    fill: var(--icon-color);
+}
+
+.contact-info__item-icon {
+    height: 1.1428rem;
+    vertical-align: text-bottom;
+}
+
+.contact-info__avatar {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border: 3px solid;
+    border-color: var(--text-decoration-color);
+}
+
+
+.intro {
+    display: flex;
+    justify-content: start;
+}
+
+.intro__icon-wrapper {
+    margin-right: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.intro__icon {
+    height: 1.1428rem;
+    vertical-align: text-bottom;
+}
+
+.intro__icon path {
+    fill: var(--text-decoration-color);
+}
+
+.intro_text {
+    color: var(--secondary-text-color);
+    text-align: justify;
+}
+
+.skills__header {
+    color: var(--secondary-text-color);
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.skills__text {
+    color: var(--secondary-text-color);
+    text-align: justify;
+}
+
+
+.experiences {
+    flex: 1 1 60%;
+    margin-right: 50px;
+}
+
+.experiences__header {
+    color: var(--secondary-text-color);
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.experiences__company-header-durability {
+    color: var(--durability-text-color);
+    text-align: left;
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
+.experiences__company-header-name {
+    color: var(--primary-text-color);
+    text-decoration-color: var(--text-decoration-color);
+    text-decoration-line: underline;
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.experiences__company-project {
+    margin-left: 15px;
+    margin-bottom: 25px;
+}
+
+.experiences__company-project-role {
+    color: var(--durability-text-color);
+    text-align: left;
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
+.experiences__company-project-name {
+    color: var(--primary-text-color);
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.experiences__company-project-responsibilities {
+    color: var(--secondary-text-color);
+    padding-left: 20px;
+}
+
+.additional-info {
+    flex: 1 1 40%;
+}
+
+.additional-info__education {
+    margin-bottom: 20px;
+}
+
+.additional-info__education-header {
+    color: var(--secondary-text-color);
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.additional-info__education-university-durability {
+    color: var(--durability-text-color);
+    text-align: left;
+    margin-bottom: 10px;
+    font-size: 15px;
+}
+
+.additional-info__education-university-speciality {
+    color: var(--primary-text-color);
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+.additional-info__education-university-name {
+    color: var(--secondary-text-color);
+}
+
+.additional-info__languages {
+    margin-bottom: 20px;
+}
+
+.additional-info__languages-header {
+    color: var(--secondary-text-color);
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.additional-info__languages-item {
+    color: var(--secondary-text-color);
 }
