--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
 
-    --primary-text-color: #181820;
+    --primary-text-color: rgb(255, 255, 255);
     --secondary-text-color: #5c5c62;
     --durability-text-color: #6a737d9c;
     --icon-color: #6a737d;
@@ -35,17 +35,16 @@ body {
 }
 
 .resume {
-    margin: 50px auto;
+    margin: 30px auto;
     border: 1px solid #f5f5f5;
-    box-shadow: 1px 1px 7px 7px #f5f5f5;
-    padding: 30px 0;
+    box-shadow: 0 0 7px 7px #b6b4b4;
     max-width: 900px;
 }
 
 .resume__block {
     border-bottom: 3px solid var(--border-color);
-    padding-bottom: 30px;
-    margin-bottom: 15px;
+    padding: 20px;
+    
 }
 
 @media screen and (max-width: 576px) {
@@ -78,7 +77,6 @@ body {
     margin-bottom: 50px;
 }
 
-
 hr {
     margin: 20px 0;
     width: 100%;
@@ -89,7 +87,7 @@ hr {
 }
 
 .contact-info__header {
-    color: var(--primary-text-color);
+    color: var(--secondary-text-color);
     margin-bottom: 15px;
     text-decoration-color: var(--text-decoration-color);
     text-decoration-line: underline;
@@ -140,8 +138,8 @@ hr {
 
 .contact-info__avatar {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     object-fit: cover;
     border: 3px solid;
     border-color: var(--text-decoration-color);
@@ -205,7 +203,7 @@ hr {
 }
 
 .experiences__company-header-name {
-    color: var(--primary-text-color);
+    color: var(--secondary-text-color);
     text-decoration-color: var(--text-decoration-color);
     text-decoration-line: underline;
     text-align: left;
@@ -225,7 +223,7 @@ hr {
 }
 
 .experiences__company-project-name {
-    color: var(--primary-text-color);
+    color: var(--secondary-text-color);
     text-align: left;
     margin-bottom: 10px;
 }
@@ -257,9 +255,8 @@ hr {
 }
 
 .additional-info__education-university-speciality {
-    color: var(--primary-text-color);
+    color: var(--secondary-text-color);
     text-align: left;
-    margin-bottom: 10px;
 }
 
 .additional-info__education-university-name {
@@ -268,6 +265,7 @@ hr {
 
 .additional-info__languages {
     margin-bottom: 20px;
+    padding-bottom: 20px;
 }
 
 .additional-info__languages-header {
@@ -278,7 +276,7 @@ hr {
 
 .additional-info__languages-item {
     color: var(--secondary-text-color);
-}
+} 
 
 ul li a {
     color: rgb(78, 77, 77);
@@ -287,5 +285,21 @@ ul li a {
 
 ul li a:hover {
     color: rgb(148, 13, 13);
-    font-weight: 600;
+    text-shadow: 1px 1px 3px 5px darkred;
+    text-decoration: underline;
+    transition: 0.5s;
+}
+
+.radio{
+    text-align: center;
+    margin-bottom: 5px;
+    padding-top: 20px;
+}
+.light {
+    background: rgb(255, 255, 255);
+    color: #595959;
+}
+.dark {
+    background: rgb(28, 24, 44);
+    color: var(--primary-text-color);
 }
